--- a/src/app/privacy/page.mdx
+++ b/src/app/privacy/page.mdx
@@ -1,6 +1,6 @@
 # Privacy Policy
 
-Agloedge Technologies (“us”, “we”, or “our”) operates the <a href="https://algoedge.co">https://algoedge.co</a> and  <a href="https://golangmastery.com">https://golangmastery.com</a> websites (hereinafter referred to as the “Service”).
+Agloedge Technologies (“us”, “we”, or “our”) operates the <a href="https://algoedge.co">https://algoedge.co</a> and  <a href="https://golangmastery.dev">https://golangmastery.dev</a> websites (hereinafter referred to as the “Service”).
 
 This page informs you of our policies regarding the collection, use and disclosure of personal data when you use our Service and the choices you have associated with that data.
 
