--- a/src/app/terms/page.mdx
+++ b/src/app/terms/page.mdx
@@ -1,7 +1,7 @@
 # Terms and Conditions
 
 Please read these Terms and Conditions ("Terms", "Terms and Conditions") carefully 
-before using the <a href="https://algoedge.co">https://algoedge.co</a> and <a href="https://golangmastery.com">https://golangmastery.com</a> website
+before using the <a href="https://algoedge.co">https://algoedge.co</a> and <a href="https://golangmastery.dev">https://golangmastery.dev</a> website
 (the "Service") operated by Algoedge Technologies ("us", "we", or "our").
 
 Your access to and use of the Service is conditioned upon acceptance of and compliance with
